--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,20 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# React Native
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+android/
+ios/
+.expo/
+.bundle/
+*.log
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
